--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "license": "MIT"
 }
